infra/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portal
  namespace: monprojetpfe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portal
  template:
    metadata:
      labels:
        app: portal
    spec:
      containers:
        - name: portal
          image: monprojetpfe:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: data
              mountPath: /app/data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: portal-pvc
